feature(nanocld): cargo scale endpoint
