# bin/nanocld/specs/swagger.yaml
@@ -620,6 +620,46 @@ paths:
           description: Cargo restarted
         '404':
           description: Cargo does not exist
+  /cargoes/{Name}/scale:
+    patch:
+      tags:
+      - Cargoes
+      summary: Scale or Downscale number of instances
+      description: Scale or Downscale number of instances
+      operationId: scale_cargo
+      parameters:
+      - name: Name
+        in: path
+        description: Name of the cargo
+        required: true
+        schema:
+          type: string
+      - name: Namespace
+        in: query
+        description: Namespace of the cargo
+        required: false
+        schema:
+          type: string
+          nullable: true
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CargoScale'
+        required: true
+      responses:
+        '200':
+          description: Cargo scaled
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Cargo'
+        '404':
+          description: Cargo does not exist
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiError'
   /cargoes/{Name}/start:
     post:
       tags:
@@ -1767,6 +1807,15 @@ components:
         Signal:
           type: string
           description: 'Signal to send to the container default: SIGKILL'
+    CargoScale:
+      type: object
+      description: Payload for the cargo scale endpoint
+      required:
+      - Replicas
+      properties:
+        Replicas:
+          type: integer
+          description: Number of replicas to scale up or down can be negative value
     CargoSummary:
       type: object
       description: |-
@@ -4059,7 +4108,7 @@ components:
       properties:
         Number:
           type: integer
-          format: int64
+          minimum: 0.0
     Resource:
       type: object
       description: |-
